PCS BAckup 26Dec2023/Backup-Source/objects/Vision_InternalDRLSales_ProductSummary__c.object
<CustomObject>
    <fields>
        <fullName>Vision_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vision Internal Sales Product Summarys</relationshipLabel>
        <relationshipName>Vision_Internal_Sales_Product_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Is_OTC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is OTC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_Rx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_SRx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is SRx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Processed_Date__c</fullName>
        <label>Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Processed_Month__c</fullName>
        <formula>CASE(MONTH( Vision_Processed_Date__c ),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot; &quot;)+&quot;-&quot; +RIGHT(TEXT(YEAR( Vision_Processed_Date__c )) , LEN(TEXT(YEAR( Vision_Processed_Date__c ))) - 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Processed Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Sales__c</fullName>
        <label>Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Segment__c</fullName>
        <formula>IF( Vision_Is_Rx__c , &apos;Rx&apos;, IF( Vision_Is_SRx__c , &apos;SRx&apos;, IF( Vision_Is_OTC__c , &apos;OTC&apos;, &apos;&apos;)) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_TPT_Dollar__c</fullName>
        <label>TPT Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_TPT_Percent__c</fullName>
        <label>TPT Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Units__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vision Internal Sales Product Summary</label>
    <nameField>
        <displayFormat>DRL Sales Summary-{0000}</displayFormat>
        <label>VisionInternal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vision Internal Sales Product Summarys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>